--- a/calls-queueing.html
+++ b/calls-queueing.html
@@ -87,10 +87,12 @@
         value:[],
       },
       name:{
-        value:'test.user',
+        type:String,
+        value:"test.user",
       },
       customerDomain:{
-        value:'example.com',
+        type:String,
+        value:"example.com",
       },
       getReady:{
         computed: "_ready(customerDomain,name)"
