--- a/calls-queueing.html
+++ b/calls-queueing.html
@@ -104,10 +104,11 @@
         value: "https://firebasestorage.googleapis.com/v0/b/dolphin-one-fstest2.appspot.com/o/blue%20line.png?alt=media&token=60c3eb2b-ca67-4d1a-8a5b-02e83d170655"
       },
     },
-    setup: function(customerDomain,userRef){
-      if (customerDomain && userRef){
+    setup: function(userRef){
+      if (userRef){
         var that = this
         var list = []
+        
         userRef.collection('dashboards').onSnapshot(function(dashboard) {
           if (dashboard) {
             for (var index in dashboard.docs) {
