--- a/calls-queueing.html
+++ b/calls-queueing.html
@@ -98,7 +98,7 @@
         type: String,
       },
       getReady:{
-        computed: "setup(customerDomain,userRef)"
+        computed: "setup(userRef)"
       },
       background: {
         value: "https://firebasestorage.googleapis.com/v0/b/dolphin-one-fstest2.appspot.com/o/blue%20line.png?alt=media&token=60c3eb2b-ca67-4d1a-8a5b-02e83d170655"
