--- a/calls-queueing.html
+++ b/calls-queueing.html
@@ -117,10 +117,7 @@
               .doc(dashboard.docs[index].data().directorySource)
               .onSnapshot(function(doc) {
                 if (doc) {
-                  for (var index in doc.docs) {
-                    var data = doc.docs[index].data()
-                    list.push(data)
-                  }
+                  list.push(doc.data())
                   that.list = list
                 } else {
                   console.log("No such document!")
