--- a/calls-queueing.html
+++ b/calls-queueing.html
@@ -68,7 +68,7 @@
        <td style="color:#2828bd">95%</td>
        <td style="color:#2828bd">308 <span style="font-size:.6em;">calls</span></td>
        <td style="color:red"    >16 <span style="font-size:.6em;">calls</span></td>
-       <td rowspan="2"><img style="max-width:110px" src="[[background]]"/></td>
+       <td rowspan="2"><img style="max-width:110px" src$="[[background]]"/></td>
      </tr>
      <tr style="font-size: .6em;">
        <td colspan="3">last 24 hours</td>
