--- a/calls-queueing.html
+++ b/calls-queueing.html
@@ -4,6 +4,7 @@
 <link rel="import" href="../paper-item/paper-item-body.html">
 <link rel="import" href="../paper-item/paper-icon-item.html">
 <link rel="import" href="../text-avatar/text-avatar.html">
+<link rel="import" href="../count-up/count-up.html">
 <link rel="import" href="../polymer/polymer.html">
 <!--
   `<calls-queueing></calls-queueing>` demo
@@ -39,7 +40,7 @@
               <div style="line-height: 1;font-size:4em;font-weight:800">12</div>
             </td>
             <td style="vertical-align: bottom;padding-right:15px ;text-align:right">
-              <date-display style="line-height: 1.4;font-size:2em;" value="PT2m30s"></date-display>
+              <count-up from="Sat Aug 19 2017 08:54:28 GMT+0100"></count-up>
             </td>
           </tr>
           <tr>
