--- a/calls-queueing.html
+++ b/calls-queueing.html
@@ -40,7 +40,7 @@
               <div style="line-height: 1;font-size:4em;font-weight:800">12</div>
             </td>
             <td style="vertical-align: bottom;padding-right:15px ;text-align:right">
-              <count-up from="Sat Aug 19 2017 08:54:28 GMT+0100"></count-up>
+              <count-up style="font-size:31px" from="Sat Aug 19 2017 08:54:28 GMT+0100"></count-up>
             </td>
           </tr>
           <tr>
