--- a/calls-queueing.html
+++ b/calls-queueing.html
@@ -116,13 +116,15 @@
       if (userRef){
         var that = this
         var list = []
+        var unsub = {}
         
         userRef.collection('dashboards').onSnapshot(function(dashboard) {
           if (dashboard) {
             for (var index in dashboard.docs) {
+              var dash = dashboard.docs[index].data().directorySource
               // add unsub there
-              firebase.firestore().collection('directory')
-              .doc(dashboard.docs[index].data().directorySource)
+              unsub[dash] = firebase.firestore().collection('directory')
+              .doc(dash)
               .onSnapshot(function(doc) {
                 if (doc) {
                   list.push(doc.data())
