--- a/calls-queueing.html
+++ b/calls-queueing.html
@@ -22,7 +22,7 @@
       loading ..
     </template>
     <template is="dom-repeat" items="{{list}}">
-      <paper-material elevation="1" style$="display:inline-block;margin:10px;width:300px;height:250px;color:[[item.textColor]];background-size:cover;background-image:url('[[item.photoURI]]')">
+      <paper-material elevation="1" style$="background-color:[[bgColor]];color:[[fgColor]];display:inline-block;margin:10px;width:300px;height:250px;color:[[item.textColor]];background-size:cover;background-image:url('[[item.photoURI]]')">
         <paper-item style="background-color: rgba(255, 255, 255, 0.85);">
           <paper-icon-item>
             <text-avatar item-icon name="[[item.primaryName]]"></text-avatar>
@@ -34,7 +34,7 @@
             </template>
           </paper-item-body>
         </paper-item>
-        <table style$="background-color:[[bgColor]];color:[[fgColor]];width:100%;margin-top:5px">
+        <table style="width:100%;margin-top:5px">
           <tr>
             <td style="vertical-align: bottom;padding-left:15px ;text-align: left">
               <div style="line-height: 1;font-size:4em;font-weight:800">[[item.callsQueueing]]</div>
