--- a/calls-queueing.html
+++ b/calls-queueing.html
@@ -3,6 +3,7 @@
 <link rel="import" href="../paper-item/paper-item.html">
 <link rel="import" href="../paper-item/paper-item-body.html">
 <link rel="import" href="../paper-item/paper-icon-item.html">
+<link rel="import" href="../dashboard-tile/dashboard-tile.html">
 <link rel="import" href="../text-avatar/text-avatar.html">
 <link rel="import" href="../count-up/count-up.html">
 <link rel="import" href="../polymer/polymer.html">
