Update and rename calls-queueing.html to dashboard-tiles.html

--- a/dashboard-tiles.html
+++ b/dashboard-tiles.html
@@ -11,7 +11,7 @@
   `<calls-queueing></calls-queueing>` demo
   @demo demo.html
 -->
-<dom-module id="calls-queueing">
+<dom-module id="dashboard-tiles">
   <template>
     <style>
       :host {
@@ -29,7 +29,7 @@
 </dom-module>
 <script>
   Polymer({
-    is: "calls-queueing",
+    is: "dashboard-tiles",
     properties:{
       list:{
         type: Array,
