--- a/dashboard-tiles.html
+++ b/dashboard-tiles.html
@@ -8,7 +8,7 @@
 <link rel="import" href="../count-up/count-up.html">
 <link rel="import" href="../polymer/polymer.html">
 <!--
-  `<calls-queueing></calls-queueing>` demo
+  `<dashboard-tiles></dashboard-tiles>` demo
   @demo demo.html
 -->
 <dom-module id="dashboard-tiles">
