--- a/dashboard-tiles.html
+++ b/dashboard-tiles.html
@@ -101,6 +101,9 @@
                     alerts: alerts,
                     directorySource: dash,
                   }
+                  if (!that.allDashs[dash].data.primaryName) {
+                    that.allDashs[dash].data.primaryName = dash
+                  }
                   that.go = !that.go
                 } else {
                   console.log("No such document!")
